<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_home"
        android:title="Dashboard" />
    <item
        android:id="@+id/nav_activities"
        android:icon="@drawable/ic_activities"
        android:title="@string/activities" />
    <item
        android:id="@+id/nav_decisions"
        android:icon="@drawable/ic_decisions"
        android:title="@string/decisions" />
    <item
        android:id="@+id/nav_timeline"
        android:icon="@drawable/ic_timeline"
        android:title="@string/timeline" />
    <item
        android:id="@+id/nav_insights"
        android:icon="@drawable/ic_insights"
        android:title="@string/insights" />
</menu>
